--- a/frontend2/package.json
+++ b/frontend2/package.json
@@ -14,6 +14,8 @@
     "@tanstack/react-query": "^5.4.3",
     "@tanstack/react-query-devtools": "^5.4.3",
     "autoprefixer": "10.4.16",
+    "axios": "^1.6.1",
+    "bad-words": "^3.0.4",
     "bootstrap": "^5.3.2",
     "eslint": "8.50.0",
     "eslint-config-next": "13.5.2",
