--- a/frontend2/package.json
+++ b/frontend2/package.json
@@ -11,15 +11,18 @@
   "dependencies": {
     "@react-hook/window-size": "^3.1.1",
     "@react-three/fiber": "^8.14.3",
+    "@rooks/use-window-size": "^4.11.2",
     "@tanstack/react-query": "^5.4.3",
     "@tanstack/react-query-devtools": "^5.4.3",
     "autoprefixer": "10.4.16",
+    "bad-words": "^3.0.4",
     "bootstrap": "^5.3.2",
     "eslint": "8.50.0",
     "eslint-config-next": "13.5.2",
     "formik": "^2.4.5",
     "js-cookie": "^3.0.5",
     "next": "13.5.2",
+    "next-pwa": "^5.6.0",
     "postcss": "8.4.30",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
