--- a/frontend2/package.json
+++ b/frontend2/package.json
@@ -15,6 +15,7 @@
     "@tanstack/react-query": "^5.4.3",
     "@tanstack/react-query-devtools": "^5.4.3",
     "autoprefixer": "10.4.16",
+    "axios": "^1.6.2",
     "bad-words": "^3.0.4",
     "bootstrap": "^5.3.2",
     "eslint": "8.50.0",
