--- a/frontend2/package.json
+++ b/frontend2/package.json
@@ -32,6 +32,7 @@
     "react-icons": "^4.11.0",
     "react-modal": "^3.16.1",
     "react-parallax-tilt": "^1.7.172",
+    "react-toastify": "^9.1.3",
     "sass": "^1.69.5",
     "swiper": "^10.3.0",
     "tailwindcss": "3.3.3",
